fix upcoming status color

--- a/src/assets/scss/pages/ieo/_common-ieo.scss
+++ b/src/assets/scss/pages/ieo/_common-ieo.scss
@@ -262,7 +262,7 @@
 			&.upcoming{
 				&::before{
 					content: "Upсomming";
-					background: #237BEF;
+					background: #FFA500;
 					color: #000;
 
 				}
