fix diagrammatic err

--- a/src/assets/scss/pages/ieo/_common-ieo.scss
+++ b/src/assets/scss/pages/ieo/_common-ieo.scss
@@ -261,7 +261,7 @@
 			}
 			&.upcoming{
 				&::before{
-					content: "Upсomming";
+					content: "Upсoming";
 					background: #FFA500;
 					color: #000;
 
