--- a/src/app/adviser/adviser.component.html
+++ b/src/app/adviser/adviser.component.html
@@ -3,9 +3,12 @@
 		<div class="fs-image-container">
 			<img src="assets/img/advisor-bg.png" alt="">
 		</div>
-		<div class="title-wr">	
+		<div class="fs-content">
+			<div class="title-wr">	
 			<h1>Advisor Exrates Exchange</h1>
 		</div>
+		</div>
+		
 	</div>
 	<div class="content-part">
 		<div class="left-col">
@@ -70,7 +73,7 @@
 					</div>		
 					<div class="respons-item">
 						<div class="list-title">
-							<h4>Advisor in charge:</h4>
+							<h4>Advisor not in charge:</h4>
 						</div>
 						<ul class="advisor-list">
 							<li><span>CEO at The Currency Analytics, CMO</span></li>
@@ -81,7 +84,7 @@
 					</div>
 					<div class="respons-item">
 						<div class="list-title">
-							<h4>Advisor in charge:</h4>
+							<h4>Please notice</h4>
 						</div>
 						<div class="list-txt">
 							<p>All payments about listing are done on wallet sadf324235ADSfsadfDF, after agreement that is</p>
