--- a/src/assets/scss/pages/_advisor.scss
+++ b/src/assets/scss/pages/_advisor.scss
@@ -1,233 +1,242 @@
 .adviser-container{
 	font-size: calc(.656rem + .66vw);
-
+	@media(min-width: 1440px){
+		font-size: 20px;
+	}
 	.first-screen{
 		position: relative;
-		padding: 4em;
-	}
-	.fs-image-container{
-		img{
-
+		
+		.fs-content{
+			max-width: 1496px;
+			margin: 0 auto;
+			padding: 0 50px;
 		}
-	}
-	.title-wr{	
-		position: relative;
-		    margin-left: 17.4em;
-		h1{
-			font-weight: 400;
-			font-size: 1.8em;
-			line-height: 1.15;
+		.title-wr{	
+			position: relative;
+			margin-left: 14.9em;
+			padding: 4em;
+			h1{
+				font-weight: 400;
+				font-size: 1.8em;
+				line-height: 1.15;
 			// text-align: center;
 			color: #FFFFFF;	
 		}
 	}
-	.content-part{
-		display: flex;
-		max-width: 1496px;
-		margin: 0 auto;
-		padding: .6em 50px;
-		padding-bottom: 4em;
-		align-items: flex-start;
-		.left-col{
-			width: 17em;
-			position: sticky;
-			top: 1em;
-			margin-top: 1em;
-			.left-item{
-				background: #252543;
-				border-radius: 4px;
-				padding: 1em;
+}
+.fs-image-container{
+	img{
+
+	}
+}
+
+.content-part{
+	display: flex;
+	max-width: 1496px;
+	margin: 0 auto;
+	padding: .6em 50px;
+	padding-bottom: 3.2em;
+	align-items: flex-start;
+	.left-col{
+		width: 17em;
+		position: sticky;
+		top: 1em;
+		margin-top: .2em;
+		transform: translateY(-136px);
+		top: calc(136px + 1.2em);
+		.left-item{
+			background: #252543;
+			border-radius: 4px;
+			padding: 1em;
+		}
+		.pic-container{
+			width: 7.35em;
+			margin: 0 auto 1.15em;
+			img{
+				border-radius: 50%;
+				display: block;
+				width: 100%;
 			}
-			.pic-container{
-				width: 7.35em;
-				    margin: 0 auto 1.15em;
-				img{
-					border-radius: 50%;
-					display: block;
+		}
+		.name{
+			text-align: center;
+			margin-bottom: .4em;
+			span{
+				font-weight: 400;
+				font-size: 1.2em;
+				line-height: 1.15;
+				color: #FFFFFF;
+			}
+		}
+
+		.profesion{
+			margin-bottom: 1em;
+			text-align: center;
+			span{
+				display: block;
+				font-weight: normal;
+				font-size: .7em;
+				line-height: 1.15;
+				color: #AAB1C4;
+			}
+		}
+		.description{
+			margin-bottom: 1.5em;
+			p{
+				font-weight: normal;
+				font-size: .7em;
+				line-height: 1.15;
+				text-align: center;
+				color: #AAB1C4;
+			}
+		}
+
+		.button-wr{
+			margin-bottom: .75em;
+			.standart-btn{
+				font-size: inherit;
+				padding: .9em .7em;
+				span{
+					font-size: .8em;
+				}
+			}
+		}
+		.linkedin-profile{
+			margin-bottom: 1em;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			svg{
+				width: .8em;
+				display: block;
+				margin-right: .25em;
+			}
+			a{
+				display: block;
+				text-decoration: none;
+				position: relative;
+				bottom: -.1em;
+				&::after{
+					content: "";
 					width: 100%;
+					position: absolute;
+					border-bottom: 1px dotted #94C2FF;
+					bottom: 0;
+					left: 0;
 				}
-			}
-			.name{
-				text-align: center;
-				margin-bottom: .4em;
 				span{
+					display: block;
 					font-weight: 400;
-					font-size: 1.2em;
-					line-height: 1.15;
-					color: #FFFFFF;
+					font-size: .7em;
+					color: #94C2FF;
 				}
 			}
-			
-			.profesion{
-				margin-bottom: 1em;
+		}
+		.member{
+			p{
+				font-weight: 400;
+				font-size: .6em;
+				line-height: 1.15;
 				text-align: center;
-				span{
-					display: block;
-					font-weight: normal;
-					font-size: .7em;
-					line-height: 1.15;
-					color: #AAB1C4;
-				}
+				color: #484E65;
 			}
-			.description{
-				margin-bottom: 1.5em;
-				p{
-					font-weight: normal;
-					font-size: .7em;
-					line-height: 1.15;
-					text-align: center;
-					color: #AAB1C4;
-				}
+		}
+
+	}
+	.center-col{
+		width: calc(100% - 34.15em);
+		padding: 0 2.9em 0 1.9em;
+		.advisor-navigation{
+			padding: 1.2em 0;
+			position: sticky;
+			top: 0;
+			background: #191A39;
+			margin-bottom: 1.1em;
+			z-index: 10;
+			margin-left: -1px;
+			nav{
+				width: 100%;
+
 			}
-			
-			.button-wr{
-				margin-bottom: .75em;
-				.standart-btn{
-					font-size: inherit;
-					    padding: .9em .7em;
-					span{
-						font-size: .8em;
-					}
-				}
-			}
-			.linkedin-profile{
-				margin-bottom: 1em;
+			.advisor-navigation-wr{
 				display: flex;
-				justify-content: center;
-				align-items: center;
-				svg{
-					width: .8em;
-					display: block;
-					margin-right: .25em;
+				padding: 0;
+				margin: 0;
+			}
+			.advisor-navigation-item{
+				padding-left: 1em;
+				position: relative;
+				padding: 0;
+				&::after{
+					content: '';
+					position: absolute;
+					bottom: -9px;
+					opacity: 0;
+					transform: translateY(5px);
+					transition: .3s;
+					pointer-events: none;
+					left: 0;
+					width: 100%;
+					height: 3px;
+					background: #237BEF;
+				}
+				&:not(:last-child){
+					margin-right: 1.3em;
+				}
+				&:hover, &.active{
+					a{
+						color: #fff;
+
+					}
+					&::after{
+						opacity: 1;
+						transform: translateY(0);
+					}
 				}
 				a{
 					display: block;
-					text-decoration: none;
-					position: relative;
-					bottom: -.1em;
-					&::after{
-						content: "";
-						width: 100%;
-						position: absolute;
-						border-bottom: 1px dotted #94C2FF;
-						bottom: 0;
-						left: 0;
-					}
-					span{
-						display: block;
-						font-weight: 400;
-						font-size: .7em;
-						color: #94C2FF;
-					}
-				}
-			}
-			.member{
-				p{
 					font-weight: 400;
-					font-size: .6em;
+					font-size: .8em;
 					line-height: 1.15;
-					text-align: center;
-					color: #484E65;
+					color: #AAB1C4;
+					text-decoration: none;
 				}
 			}
 
 		}
-		.center-col{
-			width: calc(100% - 34em);
-			    padding: 0 2.15em;
-			.advisor-navigation{
-				    padding: 1.2em 0;
-				position: sticky;
-				top: 0;
-				background: #191A39;
-				    margin-bottom: 1.1em;
-				z-index: 10;
-				nav{
-					width: 100%;
 
-				}
-				.advisor-navigation-wr{
-					display: flex;
-					padding: 0;
-					margin: 0;
-				}
-				.advisor-navigation-item{
-					padding-left: 1em;
+		.respons{
+			margin-bottom: 2.1em;
+		}
+		.respons-inner{
+			max-width: 25.3em;
+		}
+		.respons-item{
+			margin-bottom: 1.25em;
+			.advisor-list{
+				li{
+					padding-left: .6em;
 					position: relative;
-					padding: 0;
-					&::after{
+					&::before{
 						content: '';
 						position: absolute;
-						    bottom: -9px;
-						opacity: 0;
-						transform: translateY(5px);
-						transition: .3s;
-						pointer-events: none;
+						width: 4px;
+						height: 4px;
+						border-radius: 50%;
+						background: #AAB1C4;
+						top: .4em;
 						left: 0;
-						width: 100%;
-						height: 3px;
-						background: #237BEF;
 					}
-					&:not(:last-child){
-						    margin-right: 1.3em;
-					}
-					&:hover, &.active{
-						a{
-							color: #fff;
-
-						}
-						&::after{
-							opacity: 1;
-							transform: translateY(0);
-						}
-					}
-					a{
-						display: block;
+					span{
 						font-weight: 400;
-						font-size: .8em;
-						line-height: 1.15;
+						font-size: .75em;
+						line-height: 1.2;
 						color: #AAB1C4;
-						text-decoration: none;
-					}
-				}
-
-			}
-
-			.respons{
-				margin-bottom: 2.8em;
-			}
-			.respons-inner{
-				max-width: 25.3em;
-			}
-			.respons-item{
-				    margin-bottom: 1.3em;
-				.advisor-list{
-					li{
-						padding-left: .6em;
-						position: relative;
-						&::before{
-							content: '';
-							position: absolute;
-							width: 4px;
-							height: 4px;
-							border-radius: 50%;
-							background: #AAB1C4;
-							top: .4em;
-							left: 0;
-						}
-						span{
-							font-weight: 400;
-							font-size: .75em;
-							line-height: 1.2;
-							color: #AAB1C4;
-						}
 					}
 				}
 			}
-			.respons-item{
-
-			}
-			.list-title{
+		}
+		.list-title{
 				// margin-bottom: .3em;
 				h4{
 					font-weight: 500;
@@ -249,6 +258,7 @@
 				margin-bottom: 2.8em;
 				.title-wr{
 					margin-bottom: .8em;
+					margin-left: 0;
 					h3{
 						font-weight: 500;
 						font-size: 1.2em;
@@ -257,6 +267,7 @@
 					}
 				}
 				.servise-item{
+					max-width: 27.9em;
 					margin-bottom: .8em;
 					img{
 						width: 100%;
@@ -282,18 +293,37 @@
 					.about-item{
 						width: 50%;
 						border: 1px solid #484E65;
-						padding: .6em .7em;
+						padding: .7em;
 						position: relative;
 						margin-top: -1px;
 						margin-left: -1px;
+						min-height: 8em;
+						transition: .3s;
+						cursor: pointer;
+						&:hover{
+							background: #39394C;
+							position: relative;
+							box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.4);
+							.item-title{
+								h5{
+									color: #fff;
+								}
+							}
+							.item-description{
+								p{
+									color: #fff;
+								}
+							}
+						}
 					}
 					.item-title{
-						margin-bottom: .75em;
+						margin-bottom: .5em;
 						h5{
 							font-weight: 500;
 							font-size: .75em;
 							line-height: 1.25;
 							color: #484E65;
+							transition:.3s;
 						}
 					}
 					.item-description{
@@ -302,13 +332,14 @@
 							font-size: .75em;
 							line-height: 1.25;
 							color: #484E65;
+							transition:.3s;
 						}
 					}
 				}
 			}
 			.road-map{
 				.title-wr{
-					margin-bottom: 1em;
+					margin-bottom: 1.35em;
 					h3{
 						font-weight: 500;
 						font-size: 1.2em;
@@ -323,7 +354,8 @@
 				}
 				.road-item{
 					position: relative;
-					margin-bottom: 1em;
+					margin-bottom: 1.2em;
+					line-height: .9;
 					&.success{
 						.successs-icon{
 							opacity: 1;
@@ -343,24 +375,27 @@
 					&::after{
 						content: '';
 						position: absolute;
-						height: 13px;
-						width: 13px;
-						left: calc(-2em - 7px);
+						height: 11px;
+						width: 11px;
+						left: calc(-2em - 6px);
 						top: 4px;
 						border-radius: 50%;
 						background: #237BEF;
 					}
 					span{
 						font-size: .75em;
-						line-height: 1.2;
+						line-height: 1;
 						color: #AAB1C4;
 					}
 				}
 				.item-q{
-					margin-bottom: 1em;
+					margin-bottom: 1.3em;
 					&::after{
 						content: '';
 						top: -1px;
+						height: 13px;
+						width: 13px;
+						left: calc(-2em - 7px);
 					}
 					&::before{
 						content: '';
@@ -397,7 +432,7 @@
 
 			}
 			.form-title{
-				    margin-bottom: 2.25em;
+				margin-bottom: 2.25em;
 				h3{
 					font-weight: 500;
 					font-size: .8em;
@@ -417,7 +452,7 @@
 				}
 			}
 			.checkbox-wr{
-				    margin-bottom: 1.1em;
+				margin-bottom: 1.1em;
 			}
 
 			.check-item{
