anchor + small fix desktop version

--- a/src/app/adviser/adviser.component.html
+++ b/src/app/adviser/adviser.component.html
@@ -44,16 +44,16 @@
 				<nav>
 					<ul class="advisor-navigation-wr">
 						<li class="advisor-navigation-item active">
-							<a href="#">Advisor Responsibilities </a>
+							<a href="#respons">Advisor Responsibilities </a>
 						</li>
 						<li class="advisor-navigation-item">
-							<a href="#">Services</a>
+							<a href="#servise">Services</a>
 						</li>
 						<li class="advisor-navigation-item">
-							<a href="#">About Exrates</a>
+							<a href="#about-block">About Exrates</a>
 						</li>
 						<li class="advisor-navigation-item">
-							<a href="#">Road Map</a>
+							<a href="#road-map">Road Map</a>
 						</li>
 					</ul>
 				</nav>
