--- a/src/app/adviser/adviser.component.html
+++ b/src/app/adviser/adviser.component.html
@@ -168,7 +168,7 @@
 					<h3>Road Map</h3>
 				</div>
 				<div class="road-map-item-wr">
-					<div class="road-item item-q">	
+					<div class="road-item item-q success">	
 						<span>Q1 2019</span>
 					</div>
 					<div class="road-item success">
@@ -191,6 +191,48 @@
 					</div>
 					<div class="road-item item-q">
 						<span>Q2 2019</span>
+					</div>
+					<div class="road-item">
+						<div class="successs-icon">
+							<svg width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<rect width="3" height="14.1641" rx="1.5" transform="matrix(-0.707107 -0.707107 -0.707107 0.707107 16.0002 2.55396)" fill="#237BEF"/>
+								<rect width="3" height="8.22082" rx="1.5" transform="matrix(-0.707107 0.707107 0.707107 0.707107 2.12131 4.63525)" fill="#237BEF"/>
+							</svg>
+						</div>	
+						<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod a aliqua.</span>
+					</div>
+					<div class="road-item">
+						<div class="successs-icon">
+							<svg width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<rect width="3" height="14.1641" rx="1.5" transform="matrix(-0.707107 -0.707107 -0.707107 0.707107 16.0002 2.55396)" fill="#237BEF"/>
+								<rect width="3" height="8.22082" rx="1.5" transform="matrix(-0.707107 0.707107 0.707107 0.707107 2.12131 4.63525)" fill="#237BEF"/>
+							</svg>
+						</div>	
+						<span>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
+					</div>
+					<div class="road-item item-q">	
+						<span>Q3 2019</span>
+					</div>
+					<div class="road-item">
+						<div class="successs-icon">
+							<svg width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<rect width="3" height="14.1641" rx="1.5" transform="matrix(-0.707107 -0.707107 -0.707107 0.707107 16.0002 2.55396)" fill="#237BEF"/>
+								<rect width="3" height="8.22082" rx="1.5" transform="matrix(-0.707107 0.707107 0.707107 0.707107 2.12131 4.63525)" fill="#237BEF"/>
+							</svg>
+						</div>	
+						<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod a aliqua.</span>
+					</div>
+					<div class="road-item">
+						<div class="successs-icon">
+							<svg width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<rect width="3" height="14.1641" rx="1.5" transform="matrix(-0.707107 -0.707107 -0.707107 0.707107 16.0002 2.55396)" fill="#237BEF"/>
+								<rect width="3" height="8.22082" rx="1.5" transform="matrix(-0.707107 0.707107 0.707107 0.707107 2.12131 4.63525)" fill="#237BEF"/>
+							</svg>
+						</div>	
+						<span>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
+					</div>
+					<div class="road-item item-q">
+						<span>Q4 2019</span>
 					</div>
 					<div class="road-item">
 						<div class="successs-icon">
