--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -77,8 +77,7 @@
                 </div>
                 <div class="table__details-item">
                   <div class="table__details-item-title">{{'Fee' | translate}}</div>
-                  <div class="table__details-item-value" *ngIf="!isVipUser">{{item.commissionFixedAmount}} {{item.currencyPairName | splitCurrency: 2}}</div>
-                  <div class="table__details-item-value" *ngIf="isVipUser">0.0</div>
+                  <div class="table__details-item-value">{{item.commissionFixedAmount}} {{item.currencyPairName | splitCurrency: 2}}</div>
                 </div>
                 <div class="table__details-item">
                   <div class="table__details-item-title">{{'In total' | translate}}</div>
@@ -321,13 +320,10 @@
             </span>
           </td>
           <td class="table__cell">
-            <span class="orders__comission"></span>
-            <span class="orders__comission-usd" *ngIf="!isVipUser">
-              <span>{{item.commissionFixedAmount | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
+            <span class="orders__comission"></span><span class="orders__comission-usd"><span>
+                {{item.commissionFixedAmount | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
                 {{item.currencyPairName | splitCurrency: 2}}
-              </span>
-            </span>
-            <span *ngIf="isVipUser">0.0</span>
+            </span></span>
           </td>
           <td class="table__cell table__cell--tar">
             <span>
