--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -12,17 +12,7 @@
 			</div> -->
 		</div>
 
-
-    <div
-      class="infinity-scroll-news"
-      #scrollContainer
-      [ngStyle]="newsScrollStyles"
-      infiniteScroll
-      [infiniteScrollDistance]="2"
-      [infiniteScrollThrottle]="50"
-      [scrollWindow]="false"
-      [horizontal]="false"
-      (scrolled)="loadMoreNews()">
+    <perfect-scrollbar (psYReachEnd)="loadMoreNews()" [ngStyle]="newsScrollStyles">
 		<div class="partners-body">
 
 			<div class="partners-item-wr">
@@ -72,6 +62,6 @@
 				</div>
 			</div>
 		</div>
-		</div>
+    </perfect-scrollbar>
 	</div>
 </div>
