--- a/src/app/news/news.component.scss
+++ b/src/app/news/news.component.scss
@@ -1,20 +1,20 @@
-.infinity-scroll-news::-webkit-scrollbar-track
-{
-  //-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  background-color: #838587;
-  width: 4px;
-}
-
-.infinity-scroll-news::-webkit-scrollbar
-{
-  width: 6px;
-  background-color: #F5F5F5;
-}
-
-.infinity-scroll-news::-webkit-scrollbar-thumb
-{
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  width: 2px;
-  background-color: #131624;
-}
+//.infinity-scroll-news::-webkit-scrollbar-track
+//{
+//  //-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+//  background-color: #838587;
+//  width: 4px;
+//}
+//
+//.infinity-scroll-news::-webkit-scrollbar
+//{
+//  width: 6px;
+//  background-color: #F5F5F5;
+//}
+//
+//.infinity-scroll-news::-webkit-scrollbar-thumb
+//{
+//  border-radius: 10px;
+//  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+//  width: 2px;
+//  background-color: #131624;
+//}
