subscribe modal style

--- a/src/app/popups/thank-you-popup/thank-you-popup.component.scss
+++ b/src/app/popups/thank-you-popup/thank-you-popup.component.scss
@@ -1,9 +1,15 @@
 .tnx-head{
-    font-size: 24px;
-    margin-bottom: 50px;
+	font-size: 24px;
+	margin-bottom: 22px;
 }
 
 .tnx-description{
-    font-size: 14px;
-    margin-bottom: 50px;
+	font-size: 19px;
+	margin-bottom: 27px;
+}
+
+
+.popup{
+	min-height: unset;
+	padding: 50px 32px;
 }
