--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -23,7 +23,7 @@
 						<span>{{item.date  | amFromUtc | amLocal | amDateFormat:"DD MMM YYYY"}}</span>
 					</div>
 					<div class="partnters__lnk-part">
-						<a [href]="item.url" class="rss-lnk" rel="nofollow">
+						<a [href]="item.url" class="rss-lnk" target="blank" rel="nofollow">
               {{item.title}}
 							<span>
 								<svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
