--- a/src/assets/scss/pages/partner-news/_partner-news.scss
+++ b/src/assets/scss/pages/partner-news/_partner-news.scss
@@ -41,8 +41,12 @@
 
 .partners-main{
 	font-size: calc(.581rem + .582vw);
+
 	padding-top: 1.4em;
 	padding-bottom: 1.5em;
+	@media(min-width: 1440px){
+		font-size: 20px;
+	}
 	button{
 		border: none;
 		background: none;
@@ -261,7 +265,7 @@
 	&.active{
 		opacity: 1;
 	}
-	
+
 	.preloader-item{
 		max-width: 31.8em;
 		width: 48%;
