hide banner ieo

--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -218,7 +218,7 @@
       </div>
     </div>
   </div>
-  <div class="kyc-banner" *ngIf="verificationStatus !== KYC_STATUS.SUCCESS">
+  <div class="kyc-banner" *ngIf="isAuthenticated && verificationStatus !== KYC_STATUS.SUCCESS">
     <img src="assets/img/ieo/kyc-img.png" alt="" (click)="bannerClick()">
   </div>
   <div class="ieo-list">
