delete target blank from tg links

--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -45,7 +45,7 @@
           <p>Notify me about upcoming projects in telegram chanel </p>
         </div>
         <div class="link-wr">
-          <a href="tg://resolve?domain=exratesme" target="blank" (click)="redirectToTelegram()">@botExratesme</a>
+          <a href="tg://resolve?domain=exratesme" (click)="redirectToTelegram()">@botExratesme</a>
         </div>
       </div>
       <div class="different-comunication" *ngIf="!isEmailSubscribe && isRedirectToTelegram">
@@ -142,7 +142,7 @@
           </div>
           <div class="bottom-part">
             <div class="link-wr">
-              <a href="tg://resolve?domain=exratesme" target="blank" (click)="redirectToTelegram()">@botExratesme</a>
+              <a href="tg://resolve?domain=exratesme" (click)="redirectToTelegram()">@botExratesme</a>
             </div>
           </div>
         </div>
