fix hiding features

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -84,7 +84,7 @@
 
            <!--TEMP LINK for strap-->
           <li class="menu__item" routerLinkActive="menu__link--active">
-            <ng-container *ngIf="showContent">
+            <ng-container>
                <a class="menu__link" routerLink="/ieo">
                  <span class="menu__link-text">{{'IEO' | translate}}</span>
                </a>
