--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -91,7 +91,7 @@
             </ng-container>
           </li>
           <li class="menu__item" routerLinkActive="menu__link--active">
-            <ng-container *ngIf="showContent">
+            <ng-container>
                <a class="menu__link" href="https://support.exrates.me" target="blank">
                  <span class="menu__link-text">{{'Support' | translate}}</span>
                </a>
