--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -370,7 +370,7 @@
         <span class="menu-mob__link-text">{{'Order history' | translate}}</span>
       </a>
 
-        <a class="menu-mob__link" href="http://support.exrates.me" target="blank"><span
+        <a class="menu-mob__link" routerLink="/news" (click)="mobileLinkClick()"><span
           class="menu-mob__link-text">{{'News' | translate}}</span>
         </a>
         <a class="menu-mob__link" (click)="setMobileWidget('chat')" [routerLink]="['dashboard']" [queryParams]="{widget: 'chat'}" *ngIf="isAuthenticated"><span
@@ -384,7 +384,7 @@
             <a class="menu-mob__link" (click)="mobileLinkClick()" [routerLink]="'/ieo/' + ieo.id" *ngFor="let ieo of (ieoList$ | async)">{{ieo.currencyDescription}} ({{ieo.status | showStageStatus}})</a>
           </div>
         </div>
-        <a class="menu-mob__link" onclick="openChat()">
+        <a class="menu-mob__link" href="https://support.exrates.me">
           <span class="menu-mob__link-text">{{'Support' | translate}}</span>
         </a>
         <a class="account-info__email cursor-pointer menu-mob__link" (click)="onLogout()" *ngIf="isAuthenticated">{{'logout' | translate}}</a>
