--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -376,14 +376,18 @@
         <a class="menu-mob__link" (click)="setMobileWidget('chat')" [routerLink]="['dashboard']" [queryParams]="{widget: 'chat'}" *ngIf="isAuthenticated"><span
           class="menu-mob__link-text">{{'Chat' | translate}}</span>
         </a>
-        <div class="menu-mob__drop-wrap" *ngIf="showContent">
+
+        <a class="menu-mob__link" routerLink="/ieo" (click)="mobileLinkClick()"><span
+          class="menu-mob__link-text">{{'IEO' | translate}}</span>
+        </a>
+        <!-- <div class="menu-mob__drop-wrap" *ngIf="showContent">
           <a class="menu-mob__link menu-mob__link--drop" (click)="toggleMenuDropdowns(IEO_FLAG)" [ngClass]="{'menu-mob__link--active': showIEOList}">
             <span class="menu-mob__link-text">{{'IEO' | translate}}</span>
           </a>
           <div class="menu-mob__wrap-links" *ngIf="showIEOList">
             <a class="menu-mob__link" (click)="mobileLinkClick()" [routerLink]="'/ieo/' + ieo.id" *ngFor="let ieo of (ieoList$ | async)">{{ieo.currencyDescription}} ({{ieo.status | showStageStatus}})</a>
           </div>
-        </div>
+        </div> -->
         <a class="menu-mob__link" href="https://support.exrates.me">
           <span class="menu-mob__link-text">{{'Support' | translate}}</span>
         </a>
