--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -48,11 +48,11 @@
                 </div>
               </td>
               <td class="table__cell table__cell--tal">
-                <div>{{item.exExchangeRate}}</div>
+                <div>{{item.amountBase}}</div>
                 <span class="txt-small" [class]="setClassForOrderTypeField(item.operationType)">{{item.operationType | replaceChar: '_': ' '}}</span>
               </td>
               <td class="table__cell table__cell--tar">
-                <span>{{item.amountConvert}}</span>
+                <span>{{item.exExchangeRate}}</span>
               </td>
               <td class="table__cell table__cell--arr-mob">
                 <img class="" src="../../assets/img/arr-toggler-down-blue.svg">
