--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -3,7 +3,7 @@
 
 		<div class="partners-main__head">
 			<div class="partners-head">
-				<h1>Partner News</h1>
+				<h1>{{'Partner News' | translate}}</h1>
 			</div>
 <!-- 			<div class="follow-btn">
 				<button class="follow" (click)="makeSubscription()">
