--- a/src/app/ieo/components/ieo-descriptions/ieo-descriptions.component.html
+++ b/src/app/ieo/components/ieo-descriptions/ieo-descriptions.component.html
@@ -16,7 +16,7 @@
 
     <div class="rating">
       <div class="rating-title">
-        <h4>{{'Rating for Bittorent' | translate}}</h4>
+        <h4>{{'Rating for (ieo)' | translate}}</h4>
       </div>
       <div class="rating-item-wr">
         <div class="rating-item">
@@ -76,7 +76,7 @@
     <div class="economics standart-pg">
       <div class="economics-inner">
         <div class="text-info-block">
-          <h4>{{'Cerl Token sale and economics' | translate}}</h4>
+          <h4>{{'(ieo) Token sale and economics' | translate}}</h4>
         </div>
         <div class="economics-table">
           <div class="economics-table-wr">
@@ -104,7 +104,7 @@
 
     <div class="schedule standart-pg">
       <div class="text-info-block">
-        <h4>{{'Cerl token release schedule' | translate}}</h4>
+        <h4>{{'(ieo) token release schedule' | translate}}</h4>
       </div>
       <div class="schedule-graph" id="schedule-graph">
         <img src="assets/img/ieo/graph2.png" alt="">
