--- a/src/assets/scss/pages/ieo/_popup-notification.scss
+++ b/src/assets/scss/pages/ieo/_popup-notification.scss
@@ -8,18 +8,20 @@
 	}
 	}
 	.popup__title{
-		margin-bottom: 1em;
-		font-size: 24px;
+		margin-bottom: 1.3em;
+    font-size: 24px;
+    font-weight: 500;
 		@media(max-width: 1199px) {
 			color: #DEDEFB;
 		}
 	}
 	.popup__subtitle{
-		font-size: 18px;
-		text-align: center;
-		margin-bottom: 1.7em;
-		color: #000000;
-		line-height: 1.57;
+		    font-size: 18px;
+    text-align: center;
+    margin-bottom: 2em;
+    color: #000000;
+    line-height: 1.57;
+    font-weight: 400;
 		@media(max-width: 1199px) {
 			color: #DEDEFB;
 		}
