--- a/src/assets/scss/pages/ieo/_common-ieo.scss
+++ b/src/assets/scss/pages/ieo/_common-ieo.scss
@@ -19,31 +19,32 @@
 		position: relative;
 		.fs-wr{
 			position: relative;
-			padding: 2.55em 20px 2.55em;
+			padding: 2.15em 20px 2.55em;
 		}
 		.title-wr{
-			margin-bottom: .8em;
+			margin-bottom: .7em;
 			h2{
 				font-weight: 400;
-				font-size: 1.8em;
+				font-size: 1.6em;
 				line-height: 1.3;
 				color: #FFFFFF;
 				text-align: center;
 			}
 		}
 		.description-wr{
-			margin-bottom: 2em;
+			margin-bottom: 1.7em;
 			p{
 				text-align: center;
-				font-weight: 300;
-				font-size: 1.2em;
+				font-weight: 400;
+				font-size: 1.05em;
 				line-height: 1.2;
 				color: #94C2FF;
+				letter-spacing: .25px;
 
 			}
 		}
 		.button-wr{
-			max-width: 14.65em;
+			max-width: 12.9em;
 			margin: 0 auto;
 			@media(max-width: 992px){
 				font-size: .7em;
@@ -53,34 +54,34 @@
 				@media(max-width: 992px){
 					font-size: inherit;
 				}
-				padding: 17px .7em;
+				padding: 18px .7em;
 				span{
-					font-size: .9em;
+					font-size: .8em;
 				}
 			}
 		}
 	}
 	.common-subscribe{
-		max-width: calc(51.2em + 40px);
+		max-width: calc(45.3em + 40px);
 		margin: 0 auto;
-		padding: 1.1em 20px 1.2em;
+		padding: .9em 20px 1em;
 		.different-comunication{
 			display: flex;
-			    padding-top: 1em;
-			    align-items: center;
-			    margin-bottom: 1.3em;
+			padding-top: 1em;
+			align-items: center;
+			margin-bottom: 1.3em;
 			.icon-wr{
 				width: auto;
-				    margin-right: 1.45em;
+				margin-right: 1.45em;
 			}
 			.description-wr{
 				width: auto;
-				    margin-right: 1.8em;
-				    padding: 0;
+				margin-right: 1.8em;
+				padding: 0;
 			}
 			.wrap-input{
 				margin-right: .8em;
-				    width: 17em;
+				width: 17em;
 			}
 			.link-wr{
 				padding: 0;
@@ -99,18 +100,19 @@
 			}
 		}
 		.link-wr{
-			padding-left: 3.75em;
-			padding-top: .4em;
+			padding-left: 3.05em;
+			padding-top: .1em;
 			a{
 				font-weight: 500;
-				font-size: 1.4em;
+				font-size: 1.1em;
 				line-height: .9;
 				color: #237BEF;
 				text-decoration: none;
+				letter-spacing: -.35px;
 			}
 		}
 		.comunication-item{
-			padding: .75em 1.1em 1.25em;
+			padding: .65em .9em .9em 1em;
 			border: 1px solid #5E5F74;
 			width: calc(50% - 10px);
 			@media(max-width: 992px){
@@ -124,28 +126,31 @@
 		.top-part{
 			display: flex;
 			// justify-content: space-between;
-			margin-bottom: 1.5em;
+			// margin-bottom: 1.5em;
 			// align-items: center;
 		}
 		.icon-wr{
-			height: 2.25em;
-			width: 3.6em;
+			height: 2.05em;
+			width: 3.15em;
 			svg{
 				height: 100%;
 			}
 		}
 		.description-wr{
-			width: calc(100% - 6em);
-			padding-top: .24em;
+			width: calc(100% - 3em);
+			padding-top: .2em;
 			p{
 				font-weight: 400;
-				font-size: .9em;
+				font-size: .75em;
 				line-height: 1.15;
 				color: #FFFFFF;
+				letter-spacing: -.32px;
 			}
 		}
 		.bottom-part{}
-		.form-wr{}
+		.form-wr{
+			margin-top: .8em;
+		}
 		form{
 			justify-content: space-between;
 			display: flex;
@@ -154,7 +159,8 @@
 			}
 		}
 		.wrap-input{
-			width: 12.8em;	
+			width: 12.8em;
+			margin-right: .8em;
 			@media(max-width: 992px){
 				width: calc(100% - 10em);
 			}	
@@ -177,7 +183,7 @@
 			.standart-btn{
 				@media(max-width: 1060px){
 					font-size: inherit;
-					height: 45px;
+					height: 43px;
 					span{
 						font-size: .8em;
 						display: block;
@@ -229,16 +235,16 @@
 	}
 	@media (min-width: 600px){
 		.wrap-input__input {
-			height: 45px;
+			height: 43px;
 		}
 	}
 	.popup__wrap-input{
 		margin: 0;
 	}
 	.kyc-banner{
-		max-width: calc(51.2em + 40px);
+		max-width: calc(45.3em + 40px);
 		margin: 0 auto;
-		padding: 0 20px 1.1em;
+		padding: 0 20px .9em;
 		img{
 			width: 100%;
 		}
@@ -246,12 +252,12 @@
 	.ieo-list{
 
 		.ieo-list-wr{
-			max-width: calc(51.2em + 40px);
+			max-width: calc(45.3em + 40px);
 			margin: 0 auto;
-			padding: 0 20px 1.1em;
+			padding: 0 20px 2.2em;
 		}
 		.ieo-list-item{
-			margin-bottom: 1.25em;
+			margin-bottom: 1em;
 			background-color: #fff;
 			display: flex;
 			position: relative;
@@ -262,37 +268,37 @@
 			&.upcoming{
 				&::before{
 					content: "Upсoming";
-					background: #FFA500;
-					color: #000;
+					background: #FF9C00;
+					color: #fff;
 
 				}
 			}
 			&.success{
 				&::before{
 					content: "Sucessfull";
-					background: #15CF74;
-					color: #000;
+					background: #237BEF;
+					color: #fff;
 				}
 			}
 			&.fast-sale{
 				&::before{
 					content: "Fast Sale";
 					background: #15CF74;
-					color: #000;
+					color: #fff;
 				}
 			}
 			&.failed{
 				&::before{
 					content: "Failed";
 					background: #FF3A44;
-					color: #000;
+					color: #fff;
 				}
 			}
 			&.ended{
 				&::before{
 					content: "Ended";
 					background: #237BEF;
-					color: #000;
+					color: #fff;
 				}
 			}
 			&::before{
@@ -307,12 +313,12 @@
 				width: 7.8em;
 				text-align: center;
 				font-weight: 500;
-				font-size: .7em;
+				font-size: .61em;
 				line-height: .85;
 			}
 		}
 		.img-part{
-			width: 17.2em;
+			width: 15.2em;
 			@media(max-width: 992px){
 				width: 100%;
 			}
@@ -322,17 +328,17 @@
 			}	
 		}
 		.info-coin-part{
-			width: calc(100% - 17em);
-			padding: 1em 1.3em;
+			width: calc(100% - 15em);
+			padding: .9em 1.1em;
 			@media(max-width: 992px){
 				width: 100%;
 			}
 		}
 		.title-wr{
-			margin-bottom: 1em;
+			margin-bottom: .9em;
 			h3{
 				font-weight: 500;
-				font-size: .9em;
+				font-size: .8em;
 				line-height: 1.15;
 				color: #191A39;
 			}	
@@ -364,10 +370,10 @@
 			}
 		}
 		.name-info{
-			padding: .7em .65em;
+			padding: .55em .65em;
 			span{
 				font-weight: 400;
-				font-size: .6em;
+				font-size: .55em;
 				line-height: .9;
 				display: block;
 				color: #747B8D;
@@ -378,21 +384,21 @@
 			span{
 				display: block;
 				font-weight: 500;
-				font-size: .65em;
+				font-size: .6em;
 				line-height: .9;
 				color: #24253F;
 
 			}
 		}
 		.description-wr{
-			margin-bottom: 1em;
+			margin-bottom: .8em;
 			@media(max-width: 620px){
 				font-size: 1.2em;
 			}
 			p{
 				font-weight: 400;
-				font-size: .65em;
-				line-height: 1.27;
+				font-size: .58em;
+				line-height: 1.25;
 				color: #747B8D;
 			}
 		}
@@ -402,10 +408,10 @@
 		.button-wr{
 			margin-right: .65em;
 			.standart-btn{
-				padding: 7px 1.1em;
+				padding: 8px .8em;
 				font-size: inherit;
 				span{
-					font-size: .75em;
+					font-size: .65em;
 				}
 				&.reverse{
 					&:hover{
@@ -422,19 +428,19 @@
 	}
 	.how-work{
 		.how-work-wr{
-			max-width: calc(51.2em + 40px);
+			max-width: calc(45.3em + 40px);
 			margin: 0 auto;
 			padding: 1.3em 20px;
-			padding-top: 3.5em;
-			padding-bottom: 4em;
+			padding-top: 2em;
+			padding-bottom: 3.5em;
 
 		}
 		.title-wr{
-			margin-bottom: 3.7em;
+			margin-bottom: 3.3em;
 			h3{
 				text-align: center;
 				font-weight: 500;
-				font-size: 1.8em;
+				font-size: 1.6em;
 				line-height: 1.3;
 				color: #FFFFFF;
 			}
@@ -451,7 +457,7 @@
 			padding: 1.8em;
 			padding-top: 3em;
 			border: 1px solid #5E5F74;
-			padding-bottom: 3.2em;
+			    padding-bottom: 2.7em;
 			position: relative;
 			@media(max-width: 780px){
 				width: 100%;
@@ -478,10 +484,10 @@
 			}
 		}
 		.pic-wr{
-			margin-bottom: 2.5em;
+			margin-bottom: 1.8em;
 			display: flex;
 			justify-content: center;
-			height: 4.8em;
+			height: 4.3em;
 
 			img{
 				display: block;
@@ -493,7 +499,7 @@
 			margin-bottom: .8em;
 			h4{
 				font-weight: 500;
-				font-size: .9em;
+				font-size: .8em;
 				line-height: 1.15;
 				text-align: center;
 				text-transform: uppercase;
@@ -503,7 +509,7 @@
 		.h-w-description{
 			p{
 				font-weight: 400;
-				font-size: .8em;
+				font-size: .7em;
 				line-height: 1.15;
 				text-align: center;
 				color: #AAB1C4;
@@ -512,21 +518,21 @@
 	}
 	.aditional-info-block{
 		.a-i-b-wr{
-			max-width: calc(51.2em + 40px);
+			max-width: calc(45.3em + 40px);
 			margin: 0 auto;
 			padding: 0.55em 20px;
 		}
 		.security-block{
-			margin-bottom: 1.6em;
+			margin-bottom: 1.4em;
 			@media(max-width: 992px) {
 				font-size: 1.3em;
 			}
 		}
 		.s-title{
-			margin-bottom: .5em;
+			margin-bottom: .35em;
 			h5{
 				font-weight: 400;
-				font-size: .9em;
+				font-size: .8em;
 				line-height: 1.15;
 				color: #FFFFFF;
 			}
@@ -553,13 +559,13 @@
 			}
 			span{
 				font-weight: 400;
-				font-size: .9em;
+				font-size: .8em;
 				line-height: 1.7;
 				color: #AAB1C4;
 			}
 		}
 		.adittional-block{
-			margin-bottom: 2.4em;
+			margin-bottom: 2em;
 			@media(max-width: 992px) {
 				font-size: 1.3em;
 			}
@@ -568,16 +574,16 @@
 			margin-bottom: .9em;
 			h5{
 				font-weight: 400;
-				font-size: .9em;
+				font-size: .8em;
 				line-height: 1.15;
 				color: #FFFFFF;
 			}
 		}
 		.a-block-item{
-			margin-bottom: .75em;
+			    margin-bottom: .5em;
 			a{
 				font-weight: 400;
-				font-size: .9em;
+				font-size: .8em;
 				line-height: 1.15;
 				color: #AAB1C4;
 				text-decoration: none;
@@ -587,13 +593,13 @@
 			padding: .85em;
 			border: 1px dashed #FFD76F;
 			border-radius: 2px;
-			max-width: 23em;
+			    max-width: 20.2em;
 			@media(max-width: 992px) {
 				font-size: 1.5em;
 			}
 			p{
 				font-weight: normal;
-				font-size: .65em;
+				font-size: .55em;
 				line-height: 1.5;
 				color: #FFD76F;
 
