--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -339,22 +339,9 @@
             <span>{{item.status | showOrderStatus}}</span>
           </td>
         </tr>
-        <tr class="table__row" *ngIf="!(orderItems$ | async).length && !(loading$ | async) && !initialRequest">
+        <tr class="table__row" *ngIf="!(orderItems$ | async).length && !(loading$ | async)">
           <td class="table__cell table__cell--tac" colspan="10">
             {{'No matching records found' | translate}}
-          </td>
-        </tr>
-
-        <tr class="table__row" *ngIf="!(orderItems$ | async).length && !(loading$ | async) && initialRequest">
-          <td class="table__cell table__cell--tac" colspan="10">
-            {{'No matching records found' | translate}}
-            <a
-              href=""
-              (click)="loadLastOrders($event)"
-              class="standart-lnk"
-            >
-              {{'Loading last' | translate}}{{' ' + countPerPage + ' '}}{{'orders' | translate}}
-            </a>
           </td>
         </tr>
       </tbody>
